[project]
name = "instagram-api"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Damian Akpan", email = "damiakpan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "pydantic>=2.11.4",
    "redis>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
